--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="card">
+      <h1 class="card-title">Weather App</h1>
       <div class="search">
         <input type="text" placeholder="enter city name" />
         <button><img src="images/search.png" /></button>
