--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="card">
-      <h1 class="card-title">Weather App</h1>
+      <h1 class="card-title">My City Weather</h1>
       <div class="search">
         <input type="text" placeholder="enter city name" />
         <button><img src="images/search.png" /></button>
       </div>
 
-      <div class="error">Invalid city name</div>
+      <div class="error">City not found</div>
 
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
